--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 
 <article>
   <img src="img/blog1.jpg" alt="blog 1">
-  <h4>Lorem ipsum, dolor sit amet consectetur adipisicing </h4>elit. Accusantium vitae <p>aspernatur suscipit provident nemo velit, nam esse, earum corrupti molestiae dolores. Nihil vero necessitatibus doloremque, similique molestiae eligendi ea. Quae?</p>
+  <h4>Chad Blog</h4>
+  
+  <p>This is my blog where I will blog weekly</p>
 </article>
 
 
